cmake_minimum_required(VERSION 3.13)
set(PROJECT_NAME CHIP-8)
project(${PROJECT_NAME})

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE DEBUG)

if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
    set(build_default_ex TRUE)
    if (${BUILD_EX_RAYLIB})
        add_subdirectory(deps/raylib)
        add_subdirectory(examples/raylib)
        set(build_default_ex FALSE)
    endif()
    if (${BUILD_EX_BMPFB})
        add_subdirectory(deps/bmp_fb)
        add_subdirectory(examples/bitmapfb)
        set(build_default_ex FALSE)
    endif()

    if (${build_default_ex})
        add_subdirectory(deps/bmp_fb)
        add_subdirectory(examples/bitmapfb)
    endif()
endif()

add_subdirectory(src chip8)
